run without output

--- a/graphRAG/config.yml
+++ b/graphRAG/config.yml
@@ -7,12 +7,13 @@
 models:
   default_chat_model:
     type: chat
-    model_provider: huggingface
+    model_provider: groq
     auth_type: api_key # or azure_managed_identity
-    api_key: ${API_KEY} # set this in the generated .env file
+    api_key: ${GROQ_API_KEY} # set this in the generated .env file
     # audience: "https://cognitiveservices.azure.com/.default"
     # organization: <organization_id>
-    model: huggingface/google/gemma-2b-it
+    model: llama-3.3-70b-versatile
+    # llama-3.1-8b-instant
     #huggingface/mistralai/Mistral-7B-Instruct-v0.2
     # deployment_name: <azure_model_deployment_name>
     # encoding_model: cl100k_base # automatically set by tiktoken if left undefined
@@ -20,7 +21,7 @@ models:
     concurrent_requests: 25 # max number of simultaneous LLM requests allowed
     async_mode: threaded # or asyncio
     retry_strategy: native
-    max_retries: 10
+    max_retries: 5
     tokens_per_minute: null             # set to null to disable rate limiting
     requests_per_minute: null            # set to null to disable rate limiting
   default_embedding_model:
@@ -30,7 +31,9 @@ models:
     api_key: ${API_KEY}
     # audience: "https://cognitiveservices.azure.com/.default"
     # organization: <organization_id>
-    model: huggingface/google/gemma-2b-it
+    model: BAAI/bge-small-en-v1.5
+    api_base: "local" 
+    #sentence-transformers/all-MiniLM-L6-v2
     #huggingface/sentence-transformers/all-MiniLM-L6-v2
     # deployment_name: <azure_model_deployment_name>
     # encoding_model: cl100k_base # automatically set by tiktoken if left undefined
@@ -62,20 +65,20 @@ chunks:
 
 output:
   type: file # [file, blob, cosmosdb]
-  base_dir: "output"
+  base_dir: "/projects/dsci435/fmcsafetyevents_fa25/graphRAG/output"
     
 cache:
   type: file # [file, blob, cosmosdb]
-  base_dir: "cache"
+  base_dir: "/projects/dsci435/fmcsafetyevents_fa25/graphRAG/cache"
 
 reporting:
   type: file # [file, blob]
-  base_dir: "logs"
+  base_dir: "/projects/dsci435/fmcsafetyevents_fa25/graphRAG/logs"
 
 vector_store:
   default_vector_store:
     type: lancedb
-    db_uri: output/lancedb
+    db_uri: /projects/dsci435/fmcsafetyevents_fa25/graphRAG/output/lancedb
     container_name: default
     overwrite: True
 
