--- a/graphRAG/settings.yaml
+++ b/graphRAG/settings.yaml
@@ -9,6 +9,8 @@ models:
     type: chat
     model_provider: ollama
     api_base: "http://127.0.0.1:11434"
+    auth_type: api_key # or azure_managed_identity
+    api_key: "DUMMY_KEY" # set this in the generated .env file, or remove if managed identity
     model: llama3:8b          # was llama3:70b
     concurrent_requests: 1
     async_mode: threaded
@@ -21,6 +23,8 @@ models:
     type: embedding
     model_provider: ollama
     api_base: "http://127.0.0.1:11434"
+    auth_type: api_key # or azure_managed_identity
+    api_key: "DUMMY_KEY" # set this in the generated .env file, or remove if managed identity
     model: nomic-embed-text:latest
     concurrent_requests: 1
     async_mode: threaded
@@ -30,10 +34,18 @@ models:
     requests_per_minute: null
 
 input:
-  file_type: csv
-  path: "input/dev_sample.csv"   # was dev_sample_json.csv
-  text_column: "<YOUR_TEXT_COL>" # set to the column in dev_sample.csv that contains text
-  id_column: "id"                # make this consistent with your data
+  # storage:
+  #   type: file # or blob
+  #   base_dir: "input"
+  file_type: csv # [csv, text, json]
+  path: "input/dev_sample.csv"
+  text_column: "text"
+  id_column: "RECORD_NO_LOSS_POTENTIAL"
+  # meta_columns:
+  #   - "TITLE"
+  #   - "DATE_OF_INCIDENT"
+  #   - "WORKPLACE"
+  #   - "INJURY_ILLNESS"
 
 chunks:
   size: 600
@@ -72,7 +84,8 @@ embed_text:
 extract_graph:
   model_id: default_chat_model
   prompt: "prompts/extract_graph.txt"
-  entity_types: [organization,person,geo,event]
+  #entity_types: [organization,person,geo,event]
+  entity_types: [INCIDENT_TYPE, INJURY_TYPE, BODY_PART, EQUIPMENT, LOCATION, ORGANIZATION, DATE]
   max_gleanings: 1
 
 summarize_descriptions:
